[gd_scene load_steps=16 format=3 uid="uid://ccc4i4pmcqie4"]

[ext_resource type="Script" uid="uid://d10ua6gsw5ta" path="res://scenes/screens/game_init.gd" id="1_nhm8p"]
[ext_resource type="FontFile" uid="uid://ojm4aillukff" path="res://assets/fonts/Slow Play.otf" id="2_h1k66"]
[ext_resource type="LabelSettings" uid="uid://ciqemufqkbmrl" path="res://resources/game_init-settings-label.tres" id="3_g7jhl"]
[ext_resource type="Theme" uid="uid://cb6tnblk7m60s" path="res://scenes/screens/game_init-settings-list-theme.tres" id="3_h1k66"]
[ext_resource type="Texture2D" uid="uid://csbyuyjrgshiw" path="res://assets/images/buttons/start/start-up.svg" id="3_xjbsa"]
[ext_resource type="FontFile" uid="uid://ohhyu6a83aoa" path="res://assets/fonts/Coffee Fills.otf" id="4_g7jhl"]

[sub_resource type="Gradient" id="Gradient_i3a2a"]
colors = PackedColorArray(0.564706, 0.733333, 1, 1, 0.785641, 0.785641, 0.785641, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0jira"]
gradient = SubResource("Gradient_i3a2a")
width = 65

[sub_resource type="LabelSettings" id="LabelSettings_nhm8p"]
font = ExtResource("2_h1k66")
font_size = 54
font_color = Color(0, 0.0313726, 1, 1)

[sub_resource type="DPITexture" id="DPITexture_g7jhl"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"8\"><path fill=\"none\" stroke=\"#fff\" stroke-width=\"2\" d=\"m12 2-4 3.5L4 2\"/></svg>
"
base_scale = 4.0

[sub_resource type="DPITexture" id="DPITexture_xjbsa"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"8\"><path fill=\"none\" stroke=\"#fff\" stroke-width=\"2\" d=\"m4 6 4-3.5L12 6\"/></svg>
"
base_scale = 4.0

[sub_resource type="Theme" id="Theme_xjbsa"]
default_font = ExtResource("4_g7jhl")
default_font_size = 54
SpinBox/colors/down_icon_modulate = Color(0.2627451, 0.5921569, 0.40784314, 1)
SpinBox/colors/up_icon_modulate = Color(0.19314298, 0.564931, 0.32613516, 1)
SpinBox/constants/buttons_width = 64
SpinBox/icons/down = SubResource("DPITexture_g7jhl")
SpinBox/icons/up = SubResource("DPITexture_xjbsa")

[sub_resource type="Theme" id="Theme_d4pih"]
default_font = ExtResource("2_h1k66")
default_font_size = 54

[sub_resource type="Theme" id="Theme_t11tv"]
default_font = ExtResource("2_h1k66")
default_font_size = 54

[sub_resource type="Theme" id="Theme_64jy4"]
default_font = ExtResource("2_h1k66")
default_font_size = 54

[node name="GameInit" type="Node2D"]
script = ExtResource("1_nhm8p")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [536.0]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture2D_0jira")

[node name="PlayersContainer" type="HBoxContainer" parent="."]
visible = false
offset_left = 84.0
offset_top = 298.0
offset_right = 995.0
offset_bottom = 430.0
theme_override_constants/separation = 32

[node name="PlayersLabel" type="Label" parent="PlayersContainer"]
layout_mode = 2
text = "How many players?"
label_settings = SubResource("LabelSettings_nhm8p")

[node name="PlayerCount" type="SpinBox" parent="PlayersContainer"]
layout_mode = 2
theme = SubResource("Theme_xjbsa")
min_value = 2.0
max_value = 8.0
value = 2.0
rounded = true
alignment = 1

[node name="GameSettingsContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = -184.0
offset_right = 40.0
offset_bottom = -144.0

[node name="GameSettings" type="Label" parent="GameSettingsContainer"]
layout_mode = 0
offset_left = 1088.0
offset_top = 368.0
offset_right = 1404.0
offset_bottom = 442.0
text = "Game"
label_settings = SubResource("LabelSettings_nhm8p")

[node name="GameMode" type="Label" parent="GameSettingsContainer"]
layout_mode = 0
offset_left = 1088.0
offset_top = 442.0
offset_right = 1404.0
offset_bottom = 516.0
text = "Mode:"
label_settings = SubResource("LabelSettings_nhm8p")

[node name="GameModes" type="ItemList" parent="GameSettingsContainer"]
layout_mode = 0
offset_left = 1088.0
offset_top = 558.0
offset_right = 1352.0
offset_bottom = 758.0
theme = ExtResource("3_h1k66")
allow_reselect = true
auto_width = true
auto_height = true
item_count = 2
item_0/text = "QnA"
item_1/text = "Nothing"

[node name="GameTarget" type="Label" parent="GameSettingsContainer"]
layout_mode = 0
offset_left = 1440.0
offset_top = 376.0
offset_right = 1664.0
offset_bottom = 527.0
text = "Target (Points)"
label_settings = SubResource("LabelSettings_nhm8p")
autowrap_mode = 2

[node name="GameTargets" type="ItemList" parent="GameSettingsContainer"]
layout_mode = 0
offset_left = 1432.0
offset_top = 554.0
offset_right = 1696.0
offset_bottom = 760.0
theme = ExtResource("3_h1k66")
allow_reselect = true
auto_width = true
auto_height = true
item_count = 3
same_column_width = true
item_0/text = "1000"
item_1/text = "1500"
item_2/text = "2000"

[node name="StartBtn" type="TextureButton" parent="."]
offset_left = 822.00006
offset_top = 779.00006
offset_right = 1236.0
offset_bottom = 993.00006
scale = Vector2(0.60267645, 0.522713)
texture_normal = ExtResource("3_xjbsa")

[node name="HomeBtn" type="Button" parent="."]
offset_left = 859.0
offset_top = 961.0
offset_right = 1052.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 64
text = "Home"

[node name="Title" type="Label" parent="."]
offset_left = 552.0
offset_top = 40.0
offset_right = 1376.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 96
text = "Settings"
label_settings = ExtResource("3_g7jhl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSelect" type="VBoxContainer" parent="."]
offset_left = 688.0
offset_top = 196.0
offset_right = 1221.0
offset_bottom = 341.0
alignment = 1

[node name="Label" type="Label" parent="PlayerSelect"]
layout_mode = 2
text = "How many players?"
label_settings = SubResource("LabelSettings_nhm8p")

[node name="Buttons" type="HBoxContainer" parent="PlayerSelect"]
layout_mode = 2
theme = SubResource("Theme_d4pih")
theme_override_constants/separation = 16
alignment = 1

[node name="2" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "2"
metadata/value = 2

[node name="3" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "3"
metadata/value = 3

[node name="4" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "4"
metadata/value = 4

[node name="5" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "5"
metadata/value = 5

[node name="6" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "6"
metadata/value = 6

[node name="7" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "7"
metadata/value = 7

[node name="8" type="Button" parent="PlayerSelect/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "8"
metadata/value = 8

[node name="ModeSelect" type="VBoxContainer" parent="."]
offset_left = 885.0
offset_top = 399.0
offset_right = 1080.0
offset_bottom = 541.0
theme = SubResource("Theme_t11tv")

[node name="Label" type="Label" parent="ModeSelect"]
layout_mode = 2
text = "Mode:"
label_settings = SubResource("LabelSettings_nhm8p")

[node name="Buttons" type="HBoxContainer" parent="ModeSelect"]
layout_mode = 2
theme = SubResource("Theme_64jy4")
theme_override_constants/separation = 16

[node name="qna" type="Button" parent="ModeSelect/Buttons"]
layout_mode = 2
text = "Q 'n' A"
metadata/value = "qna"

[node name="LengthSelect" type="VBoxContainer" parent="."]
offset_left = 714.0
offset_top = 585.0
offset_right = 1253.0
offset_bottom = 727.0
theme = SubResource("Theme_t11tv")

[node name="Label" type="Label" parent="LengthSelect"]
layout_mode = 2
text = "Game Length"
label_settings = SubResource("LabelSettings_nhm8p")

[node name="Buttons" type="HBoxContainer" parent="LengthSelect"]
layout_mode = 2
theme = SubResource("Theme_64jy4")
theme_override_constants/separation = 16

[node name="Short" type="Button" parent="LengthSelect/Buttons"]
layout_mode = 2
text = "Short
"
metadata/value = 200

[node name="Medium" type="Button" parent="LengthSelect/Buttons"]
layout_mode = 2
text = "Medium"
metadata/value = 2000

[node name="Long" type="Button" parent="LengthSelect/Buttons"]
layout_mode = 2
text = "Long"
metadata/value = 3000

[node name="ConfirmModal" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 312.0
offset_top = 256.0
offset_right = 1728.0
offset_bottom = 776.0

[node name="ColorRect" type="ColorRect" parent="ConfirmModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16394848, 0.21695486, 0.38877624, 1)

[node name="Players" type="HBoxContainer" parent="ConfirmModal"]
layout_mode = 0
offset_left = 320.0
offset_top = 144.0
offset_right = 845.0
offset_bottom = 213.0
theme_override_constants/separation = 32
alignment = 1

[node name="PlayersLabel" type="Label" parent="ConfirmModal/Players"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Number of players:"
vertical_alignment = 1

[node name="PlayersValue" type="Label" parent="ConfirmModal/Players"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "99"
vertical_alignment = 1

[node name="Mode" type="HBoxContainer" parent="ConfirmModal"]
layout_mode = 0
offset_left = 320.0
offset_top = 240.0
offset_right = 699.0
offset_bottom = 309.0

[node name="ModeLabel" type="Label" parent="ConfirmModal/Mode"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Game Mode: "
vertical_alignment = 1

[node name="ModeValue" type="Label" parent="ConfirmModal/Mode"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "99"
vertical_alignment = 1

[node name="Target" type="HBoxContainer" parent="ConfirmModal"]
layout_mode = 0
offset_left = 328.0
offset_top = 328.0
offset_right = 725.0
offset_bottom = 397.0

[node name="TargetLabel" type="Label" parent="ConfirmModal/Target"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Game Length:"
vertical_alignment = 1

[node name="TargetValue" type="Label" parent="ConfirmModal/Target"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "99"
vertical_alignment = 1

[node name="ConfirmLabel" type="Label" parent="ConfirmModal"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_right = 168.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Confirm?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBtn" type="Button" parent="ConfirmModal"]
layout_mode = 0
offset_left = 1144.0
offset_top = 408.0
offset_right = 1379.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 50
text = "Confirm"

[node name="BackBtn" type="Button" parent="ConfirmModal"]
layout_mode = 0
offset_left = 48.0
offset_top = 416.0
offset_right = 171.0
offset_bottom = 493.0
theme_override_font_sizes/font_size = 50
text = "Back"
